test_cases/pass/p47.lxr
SCRIPT AREA
START SCRIPT
DECLARE STRING a, b, c
a="Hello"
b=" World"
c=a & b
PRINT: c
END SCRIPT