test_cases/fail/f31.lxr
SCRIPT AREA
START SCRIPT
DECLARE CHAR c
c="hello"
END SCRIPT
